src/render/snapshots/openclank__render__input_view__tests__empty_input_normal_mode.snap
---
source: src/render/input_view.rs
expression: output
---
┌ > ─────────────────────────┐
│                            │
└────────────────────────────┘
