src/render/snapshots/openclank__render__input_view__tests__input_with_text.snap
---
source: src/render/input_view.rs
expression: output
---
┌ > ─────────────────────────┐
│hello world                 │
└────────────────────────────┘
