src/render/snapshots/openclank__render__input_view__tests__scrolling_mode_title.snap
---
source: src/render/input_view.rs
expression: output
---
┌ Input (scroll mode - press i to type) ─────────┐
│                                                │
└────────────────────────────────────────────────┘
